# guardy

./: .gitattributes  .gitignore  .guardy.yml  .guardyignore  Cargo.toml  HOW_TO_ADD_LANGUAGES.md  README.md  TESTING.md  clean-test.md  debug_entropy.rs  debug_ignore.rs  default-config.toml  demo-secrets.js  guardy.toml  guardy.yaml  guardy.yml  plan.md  plan_scanner_core.md  test-config.cfg  test-config.json  test-config.xyz  test-config.yaml  test-file.md  test-sync-config.yaml  test.json  test.yaml  test_patterns.rs  test_scan.json  test_secret.txt
.claude/: ATLASSIAN_INTEGRATION.md  settings.local.json
.claude/blueprints/: 20250715_031340_guardy_rust_blueprint.md
.claude/blueprints/20250715_guardy/: 01_guardy_rust_blueprint.md  02_implementation_tasklist.md  03_phase_1_2_cli_framework_tests.md  03b-testing-phase-1-3-security.md  03c-formatter-integration-testing.md  03d-formatter-testing-results.md
.claude/plans/: 02-protected-sync-implementation.md  hooks.md  moon_info.md  plan_protected_sync.md  plan_scan2_refactoring.md
.git-crypt/keys/default/0/: 5AB5336DE54FA64D03EF6920F3985BA5035F87F7.gpg
.github/: secret_scanning.yml
.github/workflows/: ci.yml  release.yml
examples/: guardy-advanced.yml  monorepo-config.yml
plan-archived/: 01-guardy-complementary-integration.md  02-protected-sync-implementation.md  guardy-evolution-plan.md  plan_figment.md  plan_guardy_sync_testing.md  plan_scanner.md  plan_scanner_core.md
plans/: 01-plan_optimized_scanner.md  02-planned-architecture.txt  03-clean-architecture-design.md  04-structure.txt  05-v3design.txt  06-v3-implementation-plan.md  07-static-data-refactor.md  08-plan_scan_v3_parallel_migration.md  09-scan-v3-changes.txt  10-scan-optimization-migration.md  11-filters.txt  12-content-filters-scanner-v1.txt  13-performance.txt  14-plan_performance_optimization.md  15-fast-config.txt  16-guardy-superconfig.txt  17_superconfig_integration.md  18_superconfig_incremental.md  19-direct-guardy-config.txt  20-config-fixes.txt  21-config-integration-fixes.md  SYNC_TEST_PLAN.md  plan_optimized_scanner.md
src/: lib.rs  main.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: config.rs  hooks.rs  init.rs  install.rs  mcp.rs  mod.rs  run.rs  scan.rs  security.rs  status.rs  uninstall.rs  version.rs
src/config/: core.rs  formats.rs  languages.rs  mod.rs  overrides.rs  tests.rs
src/git/: commit.rs  mod.rs  operations.rs
src/hooks/: commit_msg.rs  mod.rs  post_checkout.rs  pre_commit.rs  pre_push.rs
src/mcp/: mod.rs  tools.rs  types.rs  utils.rs
src/parallel/: README.md  core.rs  mod.rs  processor.rs  progress.rs
src/scanner/: README.md  core.rs  directory.rs  entropy.rs  ignore_intel.rs  mod.rs  parallel.rs  patterns.rs  test_detection.rs  types.rs
src/security/: mod.rs  patterns.rs  scanner.rs  tests.rs
src/shared/: mod.rs  patterns.rs
src/tools/: mod.rs  tests.rs
src/utils/: glob.rs  mod.rs  package_manager.rs
templates/: guardy.yml.template
tests/: integration_tests.rs
