[package]
name = "guardy"
version = "0.2.0"
edition = "2024"
description = "Fast, secure git hooks in Rust with MCP server integration"
license = "MIT"
authors = ["Nayeem Syed"]
repository = "https://github.com/deepbrain/guardy"
readme = "README.md"
keywords = ["git", "hooks", "security", "mcp", "pre-commit"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "guardy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
git2 = "0.20.2"
regex = "1.11.1"
globset = "0.4.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9.2"
serde_yml = "0.0.12"
figment = { version = "0.10.19", features = ["toml", "json", "yaml", "env"] }
syntect = "5.2.0"
two-face = "0.4.3"
atty = "0.2.14"
anyhow = "1.0.98"
tokio = { version = "1.46.1", features = ["full"] }
console = "0.16.0"
which = "8.0.0"
rmcp = { version = "0.3.0", features = ["server"] }
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Scanner dependencies (ripgrep ecosystem) - latest optimized versions
grep = "0.3.2"            # Meta-crate providing unified interface
grep-searcher = "0.1.14"  # Fast line-oriented searching with mmap support  
grep-regex = "0.1.13"     # Optimized regex matching for patterns
ignore = "0.4.23"         # Gitignore support and file walking

# Entropy analysis dependencies
memoize = "0.4.0"
lazy_static = "1.5.0"


# Additional ripgrep crates to consider for future CLI/output enhancements:
# grep-cli = "0.1.11"      # CLI utilities (hex escapes, stdin detection, pattern parsing)
# grep-printer = "0.2.2"   # Output formatting (human readable, JSON, colors)

[dev-dependencies]
tempfile = "3.20.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true