[workspace]
members = [
    "packages/guardy",
    "packages/supercli",
    "packages/system-profile",
    "packages/superconfig",
    "packages/superconfig-macros"
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all packages
figment = { version = "0.10.19", features = ["toml", "json", "yaml", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9.2"
serde_yml = "0.0.12"
serde_yaml_bw = "2.1.1"
anyhow = "1.0.98"
regex = "1.11.1"
tracing = "0.1.41"



[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
